# lexis

./: README.md  package-lock.json  package.json
.github/workflows/: build.yml  pages.yml  release.yml
src/: index.html  main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: bank.rs  dict.rs  essay.rs  lib.rs  main.rs  srs.rs  store.rs
src/core/: app.js  bank.js  crypto.js  dict.js  essay.js  merge.js  srs.js  sync-controller.js  sync.js  vault.js
src/platform/: desktop.js  store.js  web.js
test/: bank.test.js  controller.test.js  essay.test.js  merge.test.js  net.test.js  srs.test.js  sync.test.js
