[package]
name = "lexis"
version = "0.3.0"
description = "A minimalist word bank for essay writers"
authors = ["scotej"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "lexis_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# The backend stores bytes and runs the updater; all app logic lives in the
# shared JavaScript core (src/core), so the HTTP, date, and JSON crates the
# old Rust implementation needed are no longer pulled in.
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
# Not used directly, but `tauri::generate_context!` expands to code that
# expects it in scope.
serde_json = "1"

[target.'cfg(any(target_os = "macos", target_os = "windows", target_os = "linux"))'.dependencies]
tauri-plugin-updater = "2"

